Closed Bug 1256498 Opened 10 years ago Closed 10 years ago

gfx/layers/d3d9/CompositorD3D9.cpp(269): warning C4838: conversion from 'int32_t' to 'float' requires a narrowing conversion

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: gps, Assigned: jrmuizel)

References

Details

Attachments

(1 file, 1 obsolete file)

We're seeing this warning turned into an error in automation when building with VS2015u1.
As part of unblocking building with VS2015u1 in automation, I'm mass disabling compiler warnings that are turned into errors. This is not the preferred mechanism to fix compilation warnings. So hopefully this patch never lands because someone insists of fixing the underlying problem instead. But if it does land, hopefully the workaround is only temporary. Review commit: https://reviewboard.mozilla.org/r/39885/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/39885/
Attachment #8730462 - Flags: review?(jmuizelaar)
Attachment #8730462 - Attachment is obsolete: true
Attachment #8730462 - Flags: review?(jmuizelaar)
Attachment #8730463 - Flags: review?(bas)
Attachment #8730463 - Flags: review?(bas) → review+
Assignee: nobody → jmuizelaar
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: