Bug 1256498. Explicitly convert to float. r=bas